--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
 <body class="mat-typography">
   <app-root></app-root>
-<script src="/e9_demo/polyfills-N6LQB2YD.js" type="module"></script><script src="/e9_demo/main-OSMRSOIL.js" type="module"></script></body>
+<script src="/e9_demo/polyfills-N6LQB2YD.js" type="module"></script><script src="/e9_demo/main-W7RCNPMS.js" type="module"></script></body>
 
 </html>
